<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="100dp">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item1" />

    <EditText
        android:id="@+id/p1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint1"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item2" />

    <EditText
        android:id="@+id/projeto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint2"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item3" />

    <EditText
        android:id="@+id/lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint3"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1" />

    <TextView
        android:id="@+id/media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/situacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
